<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pv.chatredes.MainActivity">

    <item
        android:id="@+id/firebase_enable"
        android:orderInCategory="100"
        android:title="@string/firebase"
        app:showAsAction="never" />

    <item
        android:id="@+id/p2p_enable"
        android:orderInCategory="200"
        android:title="@string/p2p"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="300"
        android:title="@string/sair"
        app:showAsAction="never" />

    <item
        android:id="@+id/meu_ip"
        android:orderInCategory="400"
        android:title="@string/meu_ip"
        app:showAsAction="never" />

    <item
        android:id="@+id/dest_ip"
        android:orderInCategory="500"
        android:title="@string/dest_ip"
        app:showAsAction="never" />
</menu>
